fixed overflow bug

--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -17,7 +17,9 @@
     --button-color: #70705f;
 
     --reg: #ffc98a;
-    --num: #cfcae8;
+    --num: #e7e4f5;
+    --reg-light: #ffdcb3;
+    --num-light: #e7e4f5;
 
     --body-text: #F8F8F2;
     --button-text: #eeeeee;
@@ -79,10 +81,11 @@ html, body {
 /* Table formatting */
 
 .reg_table {
+    min-height: 300px;
     width: 100%;
     height: 100%;
     padding: 4px;
-    overflow-y: scroll;
+    /*overflow-y: scroll;*/
     background-color: var(--dark-panel-color);
     flex: auto;
     color: var(--body-text);
@@ -96,32 +99,52 @@ html, body {
     background-color: var(--base-panel-color);
 }
 
+.reg_id.reg_head {
+    width: 4em;
+    color: var(--reg);
+}
 .reg_id {
     width: 4em;
-    color: var(--reg);
+    color: var(--reg-light);
 }
 
+.reg_name.reg_head {
+    width: 4em;
+    color: var(--reg);
+}
 .reg_name {
     width: 4em;
-    color: var(--reg);
+    color: var(--reg-light);
 }
 
+.reg_intid.reg_head {
+    color: var(--reg);
+}
 .reg_intid {
-    color: var(--reg);
+    color: var(--reg-light);
 }
 
-
+.reg_fltid.reg_head {
+    color: var(--reg);
+}
 .reg_fltid {
-    color: var(--reg);
+    color: var(--reg-light);
 }
 
+.reg_hex.reg_head {
+    width: 8em;
+    color: var(--num);
+}
 .reg_hex {
-    width: 4em;
-    color: var(--num);
+    width: 8em;
+    color: var(--num-light);
 }
 
-.reg_dec {
+.reg_dec.reg_head {
     color: var(--num);
+}
+.reg_dec {
+    color: var(--num-light);
 }
 
 .t_head {
@@ -198,6 +221,11 @@ html, body {
 
 .reg_tab {
     grid-area: reg_tab;
+    min-width: 0;
+    min-height: 0;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    padding: 4px;
 }
 
 .main_toolbar {
